--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~2.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.3.1"
+    "react-native-webview": "^10.3.1",
+    "expo-print": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
